# Deribit-Backend-Service

./: Docker-compose.yaml  Dockerfile  celery_app.py  main.py  pyproject.toml  worker_deps.py
alembic/: env.py
alembic/versions/: 2026_02_05_1815-f03740f9b1fd_create_prices_table.py
api/: routes.py
core/: config.py
database/: db.py
database/models/: price.py
domain/: exceptions.py  models.py
repositories/: price_repository.py
schemas/: price.py
services/: deribit_client.py  price_service.py
tests/: conftest.py  test_routes.py
